customer-event-analysis/target/kubernetes/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: e9d53955cd0d3457cad7dd1f3ed6d6c35fcde9e0
    app.quarkus.io/build-timestamp: 2021-12-09 - 19:26:14 +0000
  labels:
    app.kubernetes.io/name: customer-event-analysis
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: customer-event-analysis
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: customer-event-analysis
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: e9d53955cd0d3457cad7dd1f3ed6d6c35fcde9e0
    app.quarkus.io/build-timestamp: 2021-12-09 - 19:26:14 +0000
  labels:
    app.kubernetes.io/name: customer-event-analysis
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: customer-event-analysis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: customer-event-analysis
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: e9d53955cd0d3457cad7dd1f3ed6d6c35fcde9e0
        app.quarkus.io/build-timestamp: 2021-12-09 - 19:26:14 +0000
      labels:
        app.kubernetes.io/name: customer-event-analysis
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: chaika/customer-event-analysis:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          name: customer-event-analysis
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
