customer-event-analysis/target/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: e9d53955cd0d3457cad7dd1f3ed6d6c35fcde9e0
    app.quarkus.io/build-timestamp: 2021-12-09 - 19:26:14 +0000
  labels:
    app.kubernetes.io/name: customer-event-analysis
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: customer-event-analysis
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: customer-event-analysis
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: e9d53955cd0d3457cad7dd1f3ed6d6c35fcde9e0
    app.quarkus.io/build-timestamp: 2021-12-09 - 19:26:14 +0000
  labels:
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/name: customer-event-analysis
  name: customer-event-analysis
spec:
  replicas: 1
  selector:
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/name: customer-event-analysis
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-url: <<unknown>>
        app.quarkus.io/commit-id: e9d53955cd0d3457cad7dd1f3ed6d6c35fcde9e0
        app.quarkus.io/build-timestamp: 2021-12-09 - 19:26:14 +0000
      labels:
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
        app.kubernetes.io/name: customer-event-analysis
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: chaika/customer-event-analysis:1.0.0-SNAPSHOT
          imagePullPolicy: IfNotPresent
          name: customer-event-analysis
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - customer-event-analysis
        from:
          kind: ImageStreamTag
          name: customer-event-analysis:1.0.0-SNAPSHOT
      type: ImageChange
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: e9d53955cd0d3457cad7dd1f3ed6d6c35fcde9e0
    app.quarkus.io/build-timestamp: 2021-12-09 - 19:26:14 +0000
  labels:
    app.kubernetes.io/name: customer-event-analysis
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: customer-event-analysis
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: customer-event-analysis
